# ebooksearch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  buildkitd.toml  pyproject.toml  spec.md
.github/workflows/: ci.yml  docker.yml
scripts/: build_fixtures.py
src/ebooksearch/: __init__.py  config.py  db.py  extractors.py  indexer.py  lite.py  main.py  models.py  progress.py  search.py  watcher.py
src/ebooksearch/static/: app.js  index.html  styles.css
tests/: conftest.py  test_app.py  test_extractors.py  test_indexer.py  test_watcher.py
