[project]
name = "ebooksearch"
version = "0.2.1"
description = "Local ebook search server with FTS5 and live indexing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "ebooklib>=0.18",
    "pypdf>=5.1",
    "watchdog>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebooksearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
